--- a/portfolio_tech/style.css
+++ b/portfolio_tech/style.css
@@ -85,21 +85,21 @@ PROJECT
 
 ********************/
 
-#project{
+#Projects{
     margin: 60px auto;
     width: 80%;
 }
 
-#project h2{
+#Projects h2{
     text-align: center;
 
 }
-#project .card img {
+#Projects .card img {
     width: 100px;
     height: 100px;
 }
 
-#project .card a{
+#Projects .card a{
     color: #800020;
 }
     
